Feature: (http response) membuat fitur find by token
